--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ankit.applespace.carbuddies">
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -15,14 +16,14 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
-
     <application
         android:allowBackup="true"
-        android:icon="@drawable/car_buddies_logo"
+        android:icon="@mipmap/ic_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -36,10 +37,10 @@
             android:value="AIzaSyAnBWaJuBYqQ3rRLvPo0_9SqzO9q3Ru50A" />
 
         <activity
-            android:name="ankit.applespace.carbuddies.Activities.MapsActivity"
+            android:name=".Activities.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name="ankit.applespace.carbuddies.Activities.SplashActivity"
+            android:name=".Activities.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,14 +48,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ankit.applespace.carbuddies.Activities.NameActivity"
-            android:theme="@android:style/Theme.Holo.Dialog"/>
+        <activity
+            android:name=".Activities.NameActivity"
+            android:theme="@android:style/Theme.Holo.Dialog" />
 
-        <service android:name="ankit.applespace.carbuddies.ServicePackage.LocationUpdateService" />
+        <service android:name=".ServicePackage.LocationUpdateService" />
 
-        <activity android:name="ankit.applespace.carbuddies.Activities.CreateActivity" />
-        <activity android:name="ankit.applespace.carbuddies.Activities.CodeActivity"></activity>
-        <activity android:name="ankit.applespace.carbuddies.Activities.JoinActivity">
+        <activity android:name=".Activities.CodeActivity" />
+        <activity android:name=".Activities.JoinActivity"></activity>
+        <activity
+            android:name=".Activities.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
     </application>
