--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,19 +47,34 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity
-            android:name=".Activities.NameActivity"
-            android:theme="@android:style/Theme.Holo.Dialog" />
+        <activity android:name=".Activities.NameActivity" />
+
+        <!-- android:theme="@android:style/Theme.Holo.Dialog" -->
 
         <service android:name=".ServicePackage.LocationUpdateService" />
 
-        <activity android:name=".Activities.CodeActivity" />
-        <activity android:name=".Activities.JoinActivity"></activity>
+        <activity android:name=".Activities.JoinActivity" >
+            <intent-filter android:label="@string/app_name">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- Accepts URIs that begin with "http://www.example.com/gizmos” -->
+                <data
+                    android:host="www.ankit.applespace.carbuddies"
+                    android:pathPrefix="/login"
+                    android:scheme="http" />
+                <!-- note that the leading "/" is required for pathPrefix -->
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".Activities.MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Activities.ConfirmationActivity">
 
         </activity>
     </application>
