--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
 
         <!--
@@ -55,7 +56,8 @@
 
         <service android:name=".ServicePackage.LocationUpdateService" />
 
-        <activity android:name=".Activities.JoinActivity" >
+        <activity android:name=".Activities.JoinActivity"
+            android:label="Enter Code">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.VIEW" />
 
